--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'net.minecraftforge.gradle' version '6.+'
     id 'idea'
@@ -6,6 +7,7 @@ plugins {
     id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.9"
     id('com.modrinth.minotaur') version '2.+'
     id('com.matthewprenger.cursegradle') version '1.4.0'
+    id('org.spongepowered.mixin') version '0.7.+'
 }
 
 group = "noodlepfp.mobees"
@@ -13,6 +15,14 @@ version = mobeesVersion
 base.archivesName = "mobees-$minecraftVersion"
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+
+mixin {
+    add sourceSets.main, "mixins.${mod_id}.refmap.json"
+    config "mixins.${mod_id}.json"
+
+    debug.verbose = true
+    debug.export = true
+}
 
 minecraft {
     mappings channel: 'parchment', version: "$mappingsVersion-$minecraftVersion"
@@ -27,6 +37,8 @@ minecraft {
             // See https://github.com/Vazkii/Patchouli#mixin-troubleshooting
             property "mixin.env.remapRefMap", "true"
             property "mixin.env.refMapRemappingFile", "$projectDir/build/createSrgToMcp/output.srg"
+
+            args "--mixin", "mixins.${mod_id}.json"
 
             mods {
                 forestry {
@@ -88,6 +100,8 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:$minecraftVersion-$forgeVersion"
+
+    annotationProcessor("org.spongepowered:mixin:0.8.5:processor")
 
     // JEI OPTIONAL
     compileOnly fg.deobf("mezz.jei:jei-$minecraftVersion-common-api:$jeiVersion")
