--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,9 @@ pluginManagement {
         maven { url = 'https://maven.parchmentmc.org' }
         maven { url = "https://files.minecraftforge.net/maven" }
         gradlePluginPortal()
+        maven {
+            name = 'sponge'
+            url = 'https://repo.spongepowered.org/maven'
+        }
     }
 }
